--- a/released_plugins/v3d_plugins/CMakeLists.txt
+++ b/released_plugins/v3d_plugins/CMakeLists.txt
@@ -61,4 +61,4 @@ else()
 	    # message(${CMAKE_DIR})
 	    add_subdirectory(${CMAKE_DIR})
 	endforeach()
-endif(${JANELIA_BUILD})
+endif(${JANELIA_BUILD} STREQUAL "ON")
