--- a/released_plugins/v3d_plugins/Janelia_ifusion/CMakeLists.txt
+++ b/released_plugins/v3d_plugins/Janelia_ifusion/CMakeLists.txt
@@ -3,4 +3,6 @@
     set(PLUGIN_SOURCES ifusion.cpp ifusion.h)
     include_directories("${TIFF_INCLUDE_DIR}")
     include_directories("${Boost_INCLUDE_DIR}")
+		include_directories(${QT_INCLUDE_DIR})
+
     configure_v3d_plugin(ifusion)
