--- a/released_plugins/v3d_plugins/Janelia_clonalselect/CMakeLists.txt
+++ b/released_plugins/v3d_plugins/Janelia_clonalselect/CMakeLists.txt
@@ -2,5 +2,7 @@ set(PLUGIN_HEADERS clonalselect.h clonalselect_gui.h) # Q_OBJECT macro containin
 set(PLUGIN_DIRECTORY_NAME FlyWorkstation_utilities/clonalSelect)
 set(PLUGIN_SOURCES clonalselect_gui.cpp clonalselect_core.cpp clonalselect.cpp clonalselect.h)
 include_directories("${TIFF_INCLUDE_DIR}")
+include_directories(${QT_INCLUDE_DIR})
+
 configure_v3d_plugin(clonalselect)
 target_link_libraries(clonalselect ${TIFF_LIBRARY})
