--- a/released_plugins/v3d_plugins/Janelia_istitch/CMakeLists.txt
+++ b/released_plugins/v3d_plugins/Janelia_istitch/CMakeLists.txt
@@ -4,6 +4,8 @@ if(TIFF_INCLUDE_DIR AND FFTW_INCLUDE_DIR AND Boost_INCLUDE_DIR)
     set(PLUGIN_SOURCES istitch.cpp istitch.h istitch_gui.h y_imglib.h)
     include_directories(${TIFF_INCLUDE_DIR})
     include_directories(${Boost_INCLUDE_DIR})
+	include_directories(${QT_INCLUDE_DIR})
+
     configure_v3d_plugin(imageStitch)
     target_link_libraries(imageStitch ${FFTW_LIBRARY})
 else()
