--- a/released_plugins/v3d_plugins/Janelia_refextract/CMakeLists.txt
+++ b/released_plugins/v3d_plugins/Janelia_refextract/CMakeLists.txt
@@ -2,5 +2,7 @@ set(PLUGIN_SOURCES refextract.cpp )
 set(PLUGIN_HEADERS refextract.h )
 set(PLUGIN_DIRECTORY_NAME refExtract)
 include_directories(${TIFF_INCLUDE_DIR})
+include_directories(${QT_INCLUDE_DIR})
+
 configure_v3d_plugin(refExtract)
 
